# cpp_python_bindings

./: .gitignore  CMakeLists.txt  README.md  __pyproject.toml  pyproject.toml  scripts.txt  setup.py
bindings/python/: CMakeLists.txt
bindings/python/examples/: example_py.py
bindings/python/src/: cxxlib_python.cpp
ci/: build.yml
cxxlib/: CMakeLists.txt
cxxlib/include/cxxlib/: api.hpp  cxxlib.hpp
cxxlib/src/: cxxlib.cpp
examples/: CMakeLists.txt
examples/src/: example_cpp.cpp
tests/: CMakeLists.txt
tests/src/: cxxlib_tests.cpp  main.cpp
